--- a/rockpaperscissor.html
+++ b/rockpaperscissor.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Rock, Paper and Scissors</h1>
     <button class="move-button" onclick="
-    compareResult('Rock')"><img class="move-icon" src="/rock-emoji.png" alt=""></button>
+    compareResult('Rock')"><img class="move-icon" src="./rock-emoji.png" alt=""></button>
     <button class="move-button" onclick="compareResult('Paper')"><img class="move-icon" src="images/paper-emoji.png" alt=""></button>
     <button class="move-button" onclick="compareResult('Scissor')"><img class="move-icon" src="images/scissor-emoji.png" alt=""></button>
 
