--- a/rockpaperscissor.html
+++ b/rockpaperscissor.html
@@ -10,8 +10,8 @@
     <h1>Rock, Paper and Scissors</h1>
     <button class="move-button" onclick="
     compareResult('Rock')"><img class="move-icon" src="./Rock-emoji.png" alt="rock-emoji"></button>
-    <button class="move-button" onclick="compareResult('Paper')"><img class="move-icon" src="images/paper-emoji.png" alt=""></button>
-    <button class="move-button" onclick="compareResult('Scissor')"><img class="move-icon" src="images/scissor-emoji.png" alt=""></button>
+    <button class="move-button" onclick="compareResult('Paper')"><img class="move-icon" src="images/Paper-emoji.png" alt=""></button>
+    <button class="move-button" onclick="compareResult('Scissor')"><img class="move-icon" src="images/Scissor-emoji.png" alt=""></button>
 
     <p class="JSresult"></p>
     <p class="JSmoves">
