--- a/rockpaperscissor.html
+++ b/rockpaperscissor.html
@@ -96,8 +96,8 @@
 
             document.querySelector('.JSresult').innerHTML = result;
 
-            document.querySelector('.JSmoves').innerHTML = `You <img src="./${playerMove}-emoji.png" class="move-icon">
-            <img src="images/${computerMove}-emoji.png" class="move-icon" alt="emoji-icon"> Computer`
+            document.querySelector('.JSmoves').innerHTML = `You <img src="./${playerMove}-emoji.png" class="move-icon" alt="emoji-icons">
+            <img src="./${computerMove}-emoji.png" class="move-icon" alt="emoji-icon"> Computer`
 
             updateScore()
 
