--- a/rockpaperscissor.html
+++ b/rockpaperscissor.html
@@ -97,7 +97,7 @@
             document.querySelector('.JSresult').innerHTML = result;
 
             document.querySelector('.JSmoves').innerHTML = `You <img src="./${playerMove}-emoji.png" class="move-icon" alt="emoji-icons">
-            <img src="./${computerMove}-emoji.png" class="move-icon" alt="emoji-icon"> Computer`
+            <img src="./${computerMove}-emoji.png" class="move-icon" alt="emoji-icon-player"> Computer`
 
             updateScore()
 
